# html-report

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-testpypi.yml  python-publish.yml  python-test.yml
example/: report.html  report_build.py  util.py
tests/: conftest.py  test_report.py  test_tabby.py
