[tool.poetry]
name = "html-report"
version = "0.0.1"
description = "This package should be used to create HTML reports that summarise the results of data analyses."
authors = ["Ben Barlow <ben.j.barlow.1@gmail.com>"]
license = "GNU LGPLv2.1"
packages = [
    { include = "htmlreport", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
dominate = "^2.6.0"
pandas = "^1.0.0"
plotly = "^5.0.0"
jinja2 = "^3.0.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.7.0"
black = "^21.12b0"
bandit = "^1.7.1"
pytest = "^7.0.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88